# codeRaspberry

./: .env  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  AUDIT_REPORT.md  CHANGES.md  IMPLEMENTATION.md  README.md  guide.txt  pyproject.toml  requirements.txt  salut.txt
adapters/: arduino_adapter.py  audio_output_adapter.py  backend_client.py  camera_adapter.py  nextion_adapter.py  respeaker_adapter.py
app/: config.py  main.py
arduino/: README.md  koda_arduino.ino
core/: event_bus.py
models/vosk/: .gitignore  README.md
scripts/: ble_wifi_provisioner.py  calibrate_rotation.py  download_vosk_model.py  install_ble_service.sh  install_nmcli_sudoers.sh  install_respeaker_udev.sh  install_rnnoise.sh  koda-ble.service  test_arduino.py  test_backend.py  test_conversation.py  test_mic_profiles.py  test_nextion.py  test_respeaker.py  test_stt_live.py
services/audio/: audio_service.py  doa_reader.py  music_player.py  pcm_broadcaster.py
services/conversation/: conversation_service.py
services/display/: display_service.py
services/hardware_check/: hardware_check_service.py
services/listener/: continuous_listener_service.py
services/motion/: motion_dispatcher.py  motion_service.py
services/speech/: speech_service.py
services/touch/: __init__.py  touch_sensor_service.py
tests/: test_camera_adapter.py  test_config.py  test_face_recognition_lifecycle.py  test_hardware_check.py  test_imports.py  test_motion_concurrent.py  test_touch_sensor_service.py
utils/: logger.py  states.py  subprocess_registry.py
(+16 files in other folders)
