[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "koda-raspberry"
version = "0.1.0"
description = "KODA companion robot - Raspberry Pi runtime"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
